$Id: CHANGES,v 1.68 2000/06/30 09:12:14 stelian Exp $

Changes between versions 0.4b17 and 0.4b18 (released June 30, 2000)
===================================================================

1.	Fixed a potential buffer overflow in restore. Thanks
	to Stan Bubrouski <satan@fastdial.net> for reporting 
	the bug.

2.	Fixed a readline-related bug which prevented
	'cat DUMPFILE | restore -i -f -' from working. Thanks
	to Charles Karney <karney@users.sourceforge.net>
	for the bug report.

3.	Changed a few "panic" into "exit", causing restore to
	be more stable against some attacks (like the last one
	reported on Bugtraq, although the last version of restore
	was not vulnerable - just dumped core). Thanks to
	Andreas Hasenack <andreas@conectiva.com.br> for reporting
	the bugs to me.

4.	Removed the suid-root bit on dump and restore in the
	default build (and generated RPMs). It should be safer
	now. Users who need the suid-root capabilities in order
	to make network backups should read first the man page
	of dump and enable the suid bit manually.

5.	Added -ltermcap to the compile parameters for restore
	when using readline support, in order to make the compile
	process work on some systems (SuSE ?). Thanks to 
	Patrik Schindler <poc@pocnet.net> for reporting the bug.

Changes between versions 0.4b16 and 0.4b17 (released June 1st, 2000)
====================================================================

1.	The -F script is called now *only* at the end of a tape,
	not at the end of the dump. Thanks to Christian Haul
	<haul@informatik.tu-darmstadt.de> for the bug report.

	Normally, the device name and the current volume number
	are passed on the command line of the script. However,
	if you want the old style script (with no arguments
	passed on the command line), you can enable it in
	configure with the --enable-oldstylefscript.

2.	Use posix signal handling to preserve dump functionality 
	with libc5. Thanks to Jeff Johnson <jbj@redhat.com> for
	the patch.
