@@ -1,4 +1,11 @@
-$Id: CHANGES,v 1.68 2000/06/30 09:12:14 stelian Exp $
+$Id: CHANGES,v 1.69 2000/08/19 22:06:03 stelian Exp $
+
+Changes between versions 0.4b17 and 0.4b19 (released ?????????????)
+===================================================================
+
+1.	Fixed the signal handling in dump (which I broke in 0.4b17)
+	which was causing several strange dump failures (dump
+	hanged or segmentation faults etc). 
 
 Changes between versions 0.4b17 and 0.4b18 (released June 30, 2000)
 ===================================================================
